# COMP30770BigData

./: .gitignore  Makefile  README.md  form.txt  main.py  pyproject.toml  summary.md  summary.txt
fullExamples/: inputExample.txt
information/: commands.txt  outputExample.txt
src/: const.py  control.py  finance.py  spark.py  spark_conf.py
